# ICDParser

./: .gitignore  CMakeLists.txt  README.md
binary/: CMakeLists.txt  README.md  main.cpp  widget.ui
creator/: CMakeLists.txt  README.md  icdgenerator.cpp  icdgenerator.h  main.cpp  widget.ui
parser/: CMakeLists.txt  README.md  parser.cpp  parser.h  widget.cpp  widget.ui
